--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,14 @@
         <jakarta.json.version>1.1.7</jakarta.json.version>
         <jackson.version>2.19.1</jackson.version>
         <snakeyaml.version>2.4</snakeyaml.version>
+        <commons-lang3.version>3.18.0</commons-lang3.version>
+        <tomcat-embed-core.version>10.1.46</tomcat-embed-core.version>
         <opentelemetry-instrumentation-bom.version>2.16.0</opentelemetry-instrumentation-bom.version>
 
         <!--CH Libraries-->
         <structured-logging.version>3.0.32</structured-logging.version>
         <api-helper-java.version>3.0.1</api-helper-java.version>
-        <api-sdk-manager-java-library.version>3.0.7</api-sdk-manager-java-library.version>
+        <api-sdk-manager-java-library.version>3.0.11</api-sdk-manager-java-library.version>
         <api-sdk-java.version>6.3.1</api-sdk-java.version>
         <api-security-java.version>2.0.8</api-security-java.version>
         <private-api-sdk-java.version>4.0.313</private-api-sdk-java.version>
@@ -325,6 +327,13 @@
             <groupId>org.testcontainers</groupId>
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <!--CVE-2025-48924-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
         </dependency>
     </dependencies>
 
